Fixed error in wow animations on mobile and tweaked media-queries.

--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -77,7 +77,7 @@
 
   .project-content .project-info p {
     color: #222;
-    font-size: 18px;
+    font-size: 16px;
     margin: 25px 0 25px 0;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
@@ -104,7 +104,7 @@
 
   .project-content .project-section p {
     color: #222;
-    font-size: 18px;
+    font-size: 16px;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
